# flash-loan-sdk-rust

./: Cargo.toml  README.md
examples/: Cargo.toml  flash_loan_once.rs
lib/: Cargo.toml
lib/src/: error.rs  instruction.rs  lib.rs  types.rs
lib/src/math/: decimal.rs  rate.rs
