[package]
name = "flash-loan-sdk"
version = "0.0.1"
description = "Rust SDK for Flash Loan program by Texture"
authors = ["Denis <denisxor@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.14"
spl-token = { version = "3.3.1", features = ["no-entrypoint"]  }
thiserror = "1.0"
uint = "0.9.0"
bytemuck = { version = "1.7.3", features = ["extern_crate_std", "min_const_generics"] }
solana-client = "1.14"

[dev-dependencies]
base64 = "0.13"
solana-program-test = "1.14"
solana-sdk = "1.14"


[lib]
crate-type = ["lib"]
